--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 /test/tmp/
 /test/version_tmp/
 /tmp/
+/storage/
+/.idea/
+/.idea/*
 
 # Used by dotenv library to load environment variables.
 # .env
