--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 /test/tmp/
 /test/version_tmp/
 /tmp/
+
+# 保存フォルダ
 /storage/
-/.idea/
-/.idea/*
 
 # Used by dotenv library to load environment variables.
 # .env
@@ -51,3 +51,26 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+## Directory-based project format:
+.idea/
+# if you remove the above rule, at least ignore the following:
+
+# User-specific stuff:
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+
+# Sensitive or high-churn files:
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
+
+# Gradle:
+.idea/gradle.xml
+.idea/libraries
+
+# Mongo Explorer plugin:
+.idea/mongoSettings.xml
